--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       text-align: center;
       padding: 50px;
       background-image: url('image/bg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 100vh;
       color: #000000;
     }
     h1 {
